com/parser/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package com.parser;
public class Parser implements ParserConstants {
    public static Context variables = new Context();
    public static void main(String[] args) throws Exception {
      Parser parser=new Parser(new StreamProvider(System.in));
      parser.Parse().execute(variables);
    }

  final public CodeBlock Parse() throws ParseException {CodeBlock block;
    block = Block();
    jj_consume_token(0);
return block;
}

  final public CodeBlock Block() throws ParseException {CodeBlock block = new CodeBlock();
    Statement c;
    c = Command();
block.add(c);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SEMICOLON:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      jj_consume_token(SEMICOLON);
      c = Command();
block.add(c);
    }
return block;
}

  final public Statement Command() throws ParseException {Token variableToken;
    ArithmeticExpression arithmeticExpression;
    BooleanExpression booleanExpression;
    CodeBlock branchA, branchB, action, block;
    Statement ret;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SKIPCOMMAND:{
      jj_consume_token(SKIPCOMMAND);
ret = new SkipStatement();
      break;
      }
    case VAR:{
      variableToken = jj_consume_token(VAR);
      jj_consume_token(EQUALS);
      arithmeticExpression = AExp();
ret = new AssignmentStatement(variableToken.image, arithmeticExpression);
        //variables.put(variableToken.image, AExpVal);

      break;
      }
    case IF:{
      jj_consume_token(IF);
      booleanExpression = BExp();
      jj_consume_token(THEN);
      branchA = Block();
      jj_consume_token(ELSE);
      branchB = Block();
ret = new IfElseStatement(booleanExpression, branchA, branchB);
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      booleanExpression = BExp();
      jj_consume_token(DO);
      action = Block();
ret = new DoWhileStatement(booleanExpression, action);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
return ret;
}

  final public ArithmeticExpression AExp() throws ParseException {Token t;
    ArithmeticExpression op1, op2;
    ArithmeticExpression ret;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUM:{
      t = jj_consume_token(NUM);
ret = new NumberExpression(Integer.parseInt(t.image));
      break;
      }
    case VAR:{
      t = jj_consume_token(VAR);
ret = new VariableExpression(t.image);
      break;
      }
    case LEFTP:{
      jj_consume_token(LEFTP);
      op1 = AExp();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        t = jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        t = jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      op2 = AExp();
      jj_consume_token(RIGHTP);
ret = new BinaryArithmeticExpression(op1, t.image, op2);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
return ret;
}

  final public BooleanExpression BExp() throws ParseException {ArithmeticExpression op1, op2;
    BooleanExpression boolOp1, boolOp2, ret;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TRUE:{
      jj_consume_token(TRUE);
ret = new ConstantBoolean(true);
      break;
      }
    case FALSE:{
      jj_consume_token(FALSE);
ret = new ConstantBoolean(true);
      break;
      }
    case NOT:{
      jj_consume_token(NOT);
      boolOp1 = BExp();
ret = new NotExpression(boolOp1);
      break;
      }
    case LEFTP:{
      jj_consume_token(LEFTP);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VAR:
      case NUM:
      case LEFTP:{
        op1 = AExp();
        jj_consume_token(ISEQUAL);
        op2 = AExp();
ret = new IsEqualExpression(op1, op2);
        break;
        }
      case TRUE:
      case FALSE:
      case NOT:{
        boolOp1 = BExp();
        jj_consume_token(AND);
        boolOp2 = BExp();
ret = new ANDExpression(boolOp1, boolOp2);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(RIGHTP);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
return ret;
}

  /** Generated Token Manager. */
  public ParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[6];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x2000000,0x508100,0x1800,0x10500,0x12560,0x12060,};
	}

  /** Constructor. */
  public Parser(Provider stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new ParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Parser(String dsl) throws ParseException, TokenMgrException {
	   this(new StringProvider(dsl));
  }

  public void ReInit(String s) {
	  ReInit(new StringProvider(s));
  }
  /** Reinitialise. */
  public void ReInit(Provider stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new ParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Parser(ParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[26];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 6; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 26; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage, token_source == null ? null : ParserTokenManager.lexStateNames[token_source.curLexState]);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
